# docx-markdown-converter

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
converter/: convert_docx_to_md.py  convert_md_to_docx.py  pyproject.toml  requirements.txt
converter/docx_to_md/: cli.py  converter.py  omml_to_latex.py
release-packages/: DOCX Markdown Converter_0.1.0_x64_en-US.msi  DOCX Markdown Converter_0.1.1_x64_en-US.msi
scripts/: run-tauri.ps1
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: test_converter.py  test_md_to_docx.py  test_omml_to_latex.py
