[package]
name = "docx-md-converter"
version = "0.1.1"
description = "Local DOCX to Markdown desktop app"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
